# mansplain

./: CLAUDE.md  Cargo.toml  README.md  mise.toml  prompt.txt
src/: main.rs
